android/CVIESDK/java/se/contextvision/cvie/CvlmLibrary.java

package se.contextvision.cvie;

import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.Platform;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.NativeLongByReference;
import com.sun.jna.ptr.PointerByReference;
import java.nio.ByteBuffer;
import java.nio.DoubleBuffer;
import java.nio.IntBuffer;

/**
 * JNA Wrapper for <b>CVLM</b><br>
 *
 * This is a simple Java native wrapper of the \ref CVLM C API. It is possible, but not recommended,
 * to use this class directly to interact with the CVIE library.  Instead, the Cvlm class,
 * which provides a higher-level Java API is recommended.
 *
 * \see CVLM
 *
 * \ingroup CVLM_java
 *
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public class CvlmLibrary implements Library {
    /// \cond
    public static final String JNA_LIBRARY_NAME = Platform.is64Bit() ? "cvie64" : "cvie";
    public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(CvlmLibrary.JNA_LIBRARY_NAME);

    static {
        Native.register(CvlmLibrary.class, CvlmLibrary.JNA_NATIVE_LIB);
    }

    public static final int LM_INIT = 1;

    public static native int CVLMCheckLicense(Pointer handle, int moduleIndex);
    public static native int CVLMGetHostId(Pointer handle, int hostTypeIndex, NativeLongByReference hostId);
    public static native int CVLMGetPossibleHostTypes(Pointer handle, PointerByReference hostTypes);
    public static native int CVLMGetPossibleModules(Pointer handle, PointerByReference modules);
    public static native int CVLMGetRegisteredModules(Pointer handle, IntBuffer moduleIndexes, IntBuffer hostTypeIndexes, ByteBuffer info);
    public static native int CVLMSetKey(Pointer handle, int moduleIndex, String key);
    public static native int CVLMSetParameterValue(int parameter, ByteBuffer value);
    public static native int CVLMUninstall(Pointer handle, int moduleIndex, int hostTypeIndex);
    /// \endcond
}
